# cameragui

./: .pre-commit-config.yaml  README.md  pyproject.toml
example_data/: example_schema.csv
src/cameragui/: annotation.py  constants.py  controller.py  image.py  main.py  model.py  schema.py  view.py
